Use my debian.org mail address

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Uploaders: Lucas Nussbaum <lucas@debian.org>,
            Gunnar Wolf <gwolf@debian.org>,
            Cédric Boutillier <boutil@debian.org>,
            Christian Hofstaedtler <zeha@debian.org>,
-           Georg Faerber <georg@riseup.net>
+           Georg Faerber <georg@debian.org>
 Build-Depends: dctrl-tools <!nocheck>,
                debhelper-compat (= 12),
                devscripts <!nocheck>,
