--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,7 @@ Build-Depends: dctrl-tools <!nocheck>,
                ruby-setup <!nocheck>,
                ruby-shoulda-context <!nocheck>,
                ruby-test-unit <!nocheck>
+Rules-Requires-Root: no
 Standards-Version: 4.4.1
 Vcs-Git: https://salsa.debian.org/ruby-team/gem2deb.git
 Vcs-Browser: https://salsa.debian.org/ruby-team/gem2deb
