tests/reproducible-extensions: fix to run in containers
Gbp-Dch: ignore

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -11,5 +11,5 @@ Depends: gem2deb-test-runner, autopkgtest
 Restrictions: allow-stderr
 
 Tests: reproducible-extensions, reproducible-extensions-vendor
-Depends: gem2deb, build-essential, reprotest
+Depends: gem2deb, build-essential, reprotest, faketime, locales-all
 Restrictions: allow-stderr
