Replace "Debian Ruby Extras Maintainers" with "Debian Ruby Team"

--- a/test/sample/install_as_gem/debian/control
+++ b/test/sample/install_as_gem/debian/control
@@ -1,7 +1,7 @@
 Source: ruby-install-as-gem
 Section: ruby
 Priority: optional
-Maintainer: Debian Ruby Extras Maintainers <pkg-ruby-extras-maintainers@lists.alioth.debian.org>
+Maintainer: Debian Ruby Team <pkg-ruby-extras-maintainers@lists.alioth.debian.org>
 Uploaders: Antonio Terceiro <terceiro@debian.org>
 Build-Depends: debhelper (>= 9~),
                gem2deb
