--- a/test/sample/multibinary/debian/control
+++ b/test/sample/multibinary/debian/control
@@ -1,7 +1,7 @@
 Source: multibinary
 Section: ruby
 Priority: optional
-Maintainer: Debian Ruby Extras Maintainers <pkg-ruby-extras-maintainers@lists.alioth.debian.org>
+Maintainer: Debian Ruby Team <pkg-ruby-extras-maintainers@lists.alioth.debian.org>
 Uploaders: Antonio Terceiro <terceiro@debian.org>
 Build-Depends: debhelper (>= 7.0.50~), gem2deb (>= 0.3.1~)
 Standards-Version: 3.9.4
