--- a/lib/gem2deb/dh_make_ruby/template/debian/control
+++ b/lib/gem2deb/dh_make_ruby/template/debian/control
@@ -1,7 +1,7 @@
 Source: <%= source_package_name %>
 Section: <%= source_package_name =~ /^ruby-/ && 'ruby' || 'FIXME' %>
 Priority: optional
-Maintainer: Debian Ruby Extras Maintainers <pkg-ruby-extras-maintainers@lists.alioth.debian.org>
+Maintainer: Debian Ruby Team <pkg-ruby-extras-maintainers@lists.alioth.debian.org>
 Uploaders: <%= maintainer['DEBFULLNAME'] %> <<%= maintainer['DEBEMAIL'] %>>
 Build-Depends: debhelper-compat (= 12),
                gem2deb (>= 1), <%= (extra_build_dependencies + binary_package.dependencies).map { |d| ", #{d}" }.join %>
