--- a/test/sample/simplemixed/Rakefile
+++ b/test/sample/simplemixed/Rakefile
@@ -8,7 +8,7 @@ spec = Gem::Specification.new do |s|
   s.requirements << 'none'
   s.require_path = 'ext'
   s.extensions << 'ext/simplemixed/extconf.rb'
-  s.author = 'Debian Ruby Extras Maintainers'
+  s.author = 'Debian Ruby Team'
   s.email = 'pkg-ruby-extras-maintainers@lists.alioth.debian.org'
   s.homepage = 'https://wiki.debian.org/Teams/Ruby'
   s.license = 'GPL-3+'
