dh-make-ruby: word wrap long description
In the cases where the upstream metadata already contains a decent
description, then we don't need to do anything.

--- a/lib/gem2deb/dh_make_ruby/template/debian/control
+++ b/lib/gem2deb/dh_make_ruby/template/debian/control
@@ -19,7 +19,7 @@ XB-Ruby-Versions: ${ruby:Versions}
 Depends: ${ruby:Depends}, ${shlibs:Depends}, ${misc:Depends}
 Description: <%= short_description ? short_description : 'FIXME' %>
 <% if long_description %>
-<%= long_description.lines.map { |line| ' ' + (line.strip.empty? ? '.' : line.strip) }.join("\n") + "\n" %>
+<%= long_description.lines.map { |l| line = l.strip; ' ' + (line.strip.empty? ? '.' : line.strip) }.join("\n") + "\n" %>
 <% else %>
 <%= " <insert long description, indented with spaces>\n" %>
 <% end %>
