Add X-DhRuby-Root support to gem2deb-test-runner
Since autodep8 pass --check-dependencies unconditionally multi-binary
packages have to override the TestSuite, aside from commenting the
option in debian/rules, this is very annoying.

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -10,6 +10,10 @@ Tests: gem2deb-test-runner-autopkgtest
 Depends: gem2deb-test-runner, autopkgtest
 Restrictions: allow-stderr
 
+Tests: gem2deb-test-runner-autopkgtest-multibinary
+Depends: gem2deb-test-runner, autopkgtest
+Restrictions: allow-stderr
+
 Tests: reproducible-extensions, reproducible-extensions-vendor
 Depends: gem2deb, build-essential, reprotest, faketime, locales-all
 Restrictions: allow-stderr
