--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Build-Depends: dctrl-tools <!nocheck>,
                python3-debian <!nocheck>,
                rake <!nocheck>,
                ruby (>= 1:2.1.0.3~),
-               ruby-all-dev (>= 1:2.5),
+               ruby-all-dev (>= 1:2.7~),
                ruby-mocha (>= 0.14.0) <!nocheck>,
                ruby-rspec <!nocheck>,
                ruby-setup <!nocheck>,
@@ -33,7 +33,7 @@ Depends: debhelper-compat (= 12),
          gem2deb-test-runner (= ${binary:Version}),
          rake,
          ruby,
-         ruby-all-dev (>= 1:2.5),
+         ruby-all-dev (>= 1:2.7~),
          ruby-setup,
          ${misc:Depends},
          ${perl:Depends},
