--- a/debian/control
+++ b/debian/control
@@ -29,6 +29,7 @@ Package: gem2deb
 Architecture: any
 Depends: debhelper-compat (= 12),
          devscripts,
+         dpkg-dev,
          gem2deb-test-runner (= ${binary:Version}),
          rake,
          ruby:any,
