--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends: dctrl-tools <!nocheck>,
                rake <!nocheck>,
                ruby (>= 1:2.1.0.3~),
                ruby-all-dev (>= 1:2.5),
-               ruby-mocha (>= 0.14.0) <!nocheck>,
+               ruby-mocha <!nocheck>,
                ruby-rspec <!nocheck>,
                ruby-shoulda-context <!nocheck>,
                ruby-test-unit <!nocheck>
