--- a/debian/control
+++ b/debian/control
@@ -53,7 +53,7 @@ Description: Debian Ruby packaging suite
 Package: gem2deb-test-runner
 Architecture: any
 Depends: rake,
-         ruby:any | ruby-interpreter,
+         ruby:any,
          ruby-minitest,
          ruby-test-unit,
          ${misc:Depends},
